// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`search – task > get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://search.api.globus.org/v1/task/a1b2c3d4-e5f6-7890-abcd-ef1234567890",
}
`;

exports[`search – task > getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://search.api.globus.org/v1/task_list/524de2f6-d1a6-4b49-9286-d8dccb4196ae",
}
`;

exports[`search – task > next > get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://search.api.globus.org/v1/task/a1b2c3d4-e5f6-7890-abcd-ef1234567890",
}
`;

exports[`search – task > next > getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://search.api.globus.org/v1/task_list/524de2f6-d1a6-4b49-9286-d8dccb4196ae",
}
`;

exports[`search – task get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://search.api.globus.org/v1/task/a1b2c3d4-e5f6-7890-abcd-ef1234567890",
}
`;

exports[`search – task getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://search.api.globus.org/v1/task_list/524de2f6-d1a6-4b49-9286-d8dccb4196ae",
}
`;

exports[`search – task next get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://search.api.globus.org/v1/task/a1b2c3d4-e5f6-7890-abcd-ef1234567890",
}
`;

exports[`search – task next getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://search.api.globus.org/v1/task_list/524de2f6-d1a6-4b49-9286-d8dccb4196ae",
}
`;
